# nano_search

./: .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  README.md  plan.md  rustfmt.toml  todo.md
.devcontainer/: Dockerfile  devcontainer.json
benches/: engine.rs
data/enwiki/: .gitignore  README.md
data/simplewiki/: .gitignore  README.md  download.sh
data/source/: README.MD
data/stop_words/: README.MD
datasets/beir_nfcorpus/: README.md
datasets/cisi/: README.md
datasets/enwiki/: README.md  download.sh
datasets/enwiki_json/: .gitignore  README.md  download.sh
datasets/nfcorpus/: README.md  download.sh
datasets/scifact/: README.md
datasets/simplewiki/: download.sh
docs/: benchmarking.md  indexing.md  profiling.md
src/: lib.rs  main.rs
src/cli/: args.rs
src/cli/commands/: eval.rs  index.rs  mod.rs  search.rs
src/commands/: common.rs  eval.rs  index.rs  mod.rs  search.rs
src/data/: docs.rs  mod.rs  query.rs  stop_words.rs
src/data/cisi/: model.rs
src/data/json/: model.rs
src/data/wiki/: iterator.rs  mod.rs  model.rs
src/dataset_readers/: mod.rs  model.rs  utils.rs
src/dataset_readers/beir/: README.md  docs_json.rs  docs_parquet.rs  it_docs.rs  it_queries.rs  mod.rs  model.rs  qrels.rs  queries_json.rs  queries_parquet.rs  reader.rs  utils.rs
src/dataset_readers/cisi/: it_docs.rs  it_queries.rs  load_docs.rs  load_queries.rs  mod.rs  model.rs
src/dataset_readers/json/: it_docs.rs  it_queries.rs  mod.rs  model.rs
src/dataset_readers/wiki/: it_docs.rs  it_queries.rs  mod.rs  model.rs
src/docs/: mod.rs
src/docs/cisi/: docs.rs  iterator.rs  load_docs.rs  load_queries.rs  mod.rs  model.rs  parse.rs  query.rs  search_quality.rs
src/docs/json/: iterator.rs  mod.rs
src/docs/simplewiki/: docs.rs  iterator.rs  load_docs.rs  mod.rs  model.rs  parse.rs
src/docs/wiki/: iterator.rs  model.rs
src/docs/wiki_parsed/: iterator.rs  mod.rs  model.rs
src/engines/: mod.rs  utils.rs
src/engines/nano/: engine.rs  mod.rs  scoring.rs  search.rs  stop_words.rs  tests.rs
src/engines/nano/index/: build.rs  build_index.rs  memory.rs  mod.rs  model.rs  tests.rs
src/engines/nano/index/disk/: build.rs  iterator.rs  mod.rs  model.rs  serialize.rs
src/engines/nano/index/fs/: build.rs  fs_index.rs  iterator.rs  mod.rs  model.rs  serialize.rs
src/engines/nano/index/memory/: build.rs  iterator.rs  mod.rs  model.rs
src/engines/nano/search/: mod.rs  model.rs  planner.rs  scoring.rs  search.rs  stop_words.rs
src/engines/nano/search/collectors/: count.rs  mod.rs  model.rs  top.rs
src/engines/nano/search/iterators/: exclude.rs  intersect.rs  mod.rs  model.rs  posting_list.rs  test_utils.rs  union.rs
src/engines/nano/search/query/: ast.rs  lexer.rs  mod.rs  parser.rs  planner.rs
src/engines/nano/tests/: basic.rs  complex.rs  mod.rs
src/engines/qdrant/: README.md  engine.rs
src/engines/qdrant/tests/: complex.rs
src/engines/tantivy/: engine.rs
src/engines/tantivy/tests/: complex.rs
src/engines/vector/: README.md  coreml.rs  engine.rs  mod.rs
src/engines/vector/tests/: complex.rs
src/eval/: README.md  evaluate.rs  mod.rs  model.rs  search_quality.rs
src/eval/metrics/: compare_ranked_arrays.rs  hits.rs  mod.rs  ndcg.rs  precision.rs  recall.rs
src/fulltext/: index.rs  search.rs
src/model/: doc.rs  engine.rs  mod.rs
src/search_engines/: mod.rs
src/search_engines/fulltext/: engine.rs  index.rs
src/search_engines/nano/: engine.rs  index.rs  mod.rs  scoring.rs  search.rs
src/search_engines/nano/index/: build_index.rs  memory.rs  memory_index.rs  mod.rs  model.rs  tests.rs
src/search_engines/tantivy/: engine.rs
src/utils/: compare_arrays.rs  counting_writer.rs  download_hf.rs  download_hf_file.rs  format_number_si.rs  get_dir_size.rs  get_file_lines.rs  get_parquet_rows.rs  mod.rs  normalize.rs  panic_on_error.rs  percentile.rs  stop_words.rs  test_docs.rs  test_docs_iterator.rs  tree.rs  visit_dir_files.rs  write.rs
src/utils/wikidump/: README.md  dump.rs  iterator.rs  mod.rs  model.rs  parser.rs  parser_config.rs
(+20 files in other folders)
