[package]
name = "nano_search"
version = "0.1.0"
edition = "2024"

[dependencies]
tantivy = "0.24.1"
stats-cli = "3.0.1"
anyhow = "1.0.98"
bzip2 = "0.5.2"
parse_wiki_text = "0.1.5"
quick-xml = "0.37.5"

[dev-dependencies]
rusty-hook = "0.11.2"
tempfile = "3.20.0"
criterion = { version = "0.6.0", features = ["html_reports"] }

[lints.clippy]
unwrap_used = "warn"

[[bench]]
name = "engine"
harness = false
