[package]
name = "nano_search"
version = "0.1.0"
edition = "2024"

[dependencies]
tantivy = "0.24.1"
stats-cli = "3.0.1"
anyhow = "1.0.98"
bzip2 = "0.5.2"
parse_wiki_text = "0.1.5"
quick-xml = "0.37.5"
itertools = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0"
human_format = "1.1.0"
tokio = { version = "1.48.0", features = ["rt"] }
qdrant-client = "1.15.0"
fastembed = "5.2.0"
ort = { version = "=2.0.0-rc.10", features = ["coreml"] }
sqlite-vec = "0.1.6"
rusqlite = { version = "0.37.0", features = ["bundled"] }
zerocopy = "0.8.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
assert_float_eq = "1.2.0"
colored = "3.0.0"

[dev-dependencies]
rusty-hook = "0.11.2"
tempfile = "3.20.0"
criterion = { version = "0.6.0", features = ["html_reports"] }

[profile.profiling]
inherits = "release"
debug = true

[lints.clippy]
unwrap_used = "warn"

[[bench]]
name = "engine"
harness = false

[features]
# try to enable CoreML for hardware acceleration of embeddings
coreml = []
# use qdrant search engine for indexing/evaluation comparisons
qdrant = []
