# allow to set separate "rustflags" per build profile
cargo-features = ["profile-rustflags"]

[package]
name = "nano_search"
version = "0.1.0"
edition = "2024"

[dependencies]
tantivy = "0.24.1"
stats-cli = "3.0.1"
anyhow = "1.0.98"
bzip2 = "0.5.2"
parse_wiki_text = "0.1.5"
quick-xml = "0.37.5"
itertools = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0"
human_format = "1.1.0"
tokio = { version = "1.48.0", features = ["rt"] }
fastembed = "5.2.0"
ort = { version = "=2.0.0-rc.10", features = ["coreml"] }
sqlite-vec = "0.1.6"
rusqlite = { version = "0.37.0", features = ["bundled"] }
zerocopy = "0.8.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
assert_float_eq = "1.2.0"
colored = "3.0.0"
hf-hub = "0.4.3"
flate2 = "1.1.5"
crossbeam-channel = "0.5.15"
bon = "3.8.1"
clap = { version = "4.5.53", features = ["derive", "string"] }
memmap2 = "0.9.9"
num-traits = "0.2.19"

[dev-dependencies]
rusty-hook = "0.11.2"
tempfile = "3.20.0"
criterion = { version = "0.6.0", features = ["html_reports"] }

[profile.profiling]
inherits = "release"

# include debug info (e.g. DWARF on linux) to enable source-level mapping
# and line numbers in profilers. note that address-to-function-name mapping
# would work without it, using the symbol table (symtab section of .elf binary),
# which is enabled by default in release build
debug = true

# packs debug info into a separate file, so Instruments and other profilers
# can locate it automatically without manual path configuration
split-debuginfo = "packed"

rustflags = [
  # force frame pointers to accelerate stack unwinding. note that unwinding
  # would still work without it, since modern profilers can unwind stack using
  # other means (e.g. DWARF unwind table in eh_frame section of .elf binary),
  # which is enabled by default in release build, but frame pointers
  # significantly reduce profiling overhead and increase sampling accuracy
  "-C", "force-frame-pointers=on",

  # use legacy symbol mangling format, since some profilers (e.g. Heaptrack
  # or Instruments) do not recognize/demangle new v0 format yet
  "-C", "symbol-mangling-version=legacy", "-Z", "unstable-options"
]

[lints.clippy]
unwrap_used = "warn"

[[bench]]
name = "engine"
harness = false

[features]
# try to enable CoreML for hardware acceleration of embeddings
coreml = []
